--- a/index.html
+++ b/index.html
@@ -1,34 +1,44 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
+        <meta charset="UTF-8">
         <link rel="stylesheet" href="./styles/styles.css" type="text/css">
         <link rel="stylesheet" href="./styles/navbar.css" type="text/css">
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&family=Sometype+Mono&display=swap" rel="stylesheet">
+        <title>Some Name | Home</title>
     </head>
 
     <body>
         <header id="navbar">
-            <h1><a>OneSite</a></h1>
+            <h1><a href="/">OneSite</a></h1>
 
             <nav id="tabs">
-                <a>Pricing</a>
+                <a href="/pricing.html">Pricing</a>
                 <a class="button">Get Started</a>
             </nav>
         </header>
 
-        <div id="hero-section">
+        <section id="hero-section">
             <div class="header">
                 <h1 class="title">Design it, Ship it.</h1>
                 <p class="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In feugiat feugiat mauris. Sed egestas nulla lectus.</p>
                 <button>Get Started</button>
             </div>
-        </div>
+        </section>
 
-        <div>
-            LOL
-        </div>
+        <section id="whoweare">
+            
+        </section>
+
+        <section id="features">
+
+        </section>
+
+        <section id="testimonials">
+
+        </section>
     </body>
 </html>
