--- a/pricing.html
+++ b/pricing.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <link rel="stylesheet" href="/styles/pricing.css" type="text/css">
         <link rel="stylesheet" href="./styles/navbar.css" type="text/css">
+        <link rel="stylesheet" href="./styles/footer.css" type="text/css">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -71,6 +72,19 @@
                 <button class="action-btn">Get Started</button>
             </div>
         </section>
+
+        <footer>
+            <div class="left">
+                <h3 class="title">OneSite</h3>
+                <p class="location">10 Singapore Rd, #01-01</p>
+            </div>
+            <div class="social-media-icons">
+                <i data-feather="twitter" class="icon"></i>
+                <i data-feather="instagram" class="icon"></i>
+                <i data-feather="facebook" class="icon"></i>
+                <i data-feather="linkedin" class="icon"></i>
+            </div>
+        </footer>
     </body>
 
     <!-- Import Icons -->
