--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 
                 <nav class="tabs">
                     <a href="/pricing.html">Pricing</a>
+                    <a href="/contact.html">Contact Us</a>
                     <a class="button">Get Started</a>
                 </nav>
 
