--- a/pricing.html
+++ b/pricing.html
@@ -21,6 +21,7 @@
 
                 <nav class="tabs">
                     <a href="/pricing.html">Pricing</a>
+                    <a href="/contact.html">Contact Us</a>
                     <a class="button">Get Started</a>
                 </nav>
 
