feat: features section

--- a/index.html
+++ b/index.html
@@ -47,12 +47,51 @@
         </section>
 
         <section id="whoweare">
-            <h2 class="title">Who are we?</h2>
-            <p class="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam nibh tellus, ornare sit amet sapien pharetra, bibendum fringilla ante. Nullam arcu nulla, aliquet vitae venenatis in, dictum a quam. Donec a leo lectus. Curabitur magna lorem, vestibulum commodo sodales sit amet, pretium tristique eros. Curabitur at vestibulum velit. In tincidunt leo sit amet tempus ultricies. Sed sagittis finibus neque, vitae bibendum risus dignissim eget. Mauris dapibus quam eget nulla auctor, ac ultricies tellus iaculis.            </p>
+            <div class="text-section">
+                <h2 class="title">Who are we?</h2>
+                <p class="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam nibh tellus, ornare sit amet sapien pharetra, bibendum fringilla ante. Nullam arcu nulla, aliquet vitae venenatis in, dictum a quam. Donec a leo lectus. Curabitur magna lorem, vestibulum commodo sodales sit amet, pretium tristique eros. Curabitur at vestibulum velit. In tincidunt leo sit amet tempus ultricies. Sed sagittis finibus neque, vitae bibendum risus dignissim eget. Mauris dapibus quam eget nulla auctor, ac ultricies tellus iaculis.            </p>    
+            </div>
+            <!-- Temporary Image -->
+            <img src="https://placehold.co/600x400/png"> 
         </section>
 
         <section id="features">
+            <h2 class="title">Creating <i>your</i> website, just got better.</h2>
+            <section class="main-features">
+                <div class="feature">
+                    <img src="https://placehold.co/500x400">
+                    <h4 class="name">For Everyone</h4>
+                    <p class="desc">Effortlessly Drag & Drop elements for beginners, Direct Code Editing for Pros.</p>
+                </div>
+                <div class="feature">
+                    <img src="https://placehold.co/500x400">
+                    <h4 class="name">Advanced Analytics</h4>
+                    <p class="desc">Track your site's performance anytime, anywhere. Run A/B Tests like a professional.*</p>
+                </div>
+                <div class="feature">
+                    <img src="https://placehold.co/500x400">
+                    <h4 class="name">Lorem Ipsum</h4>
+                    <p class="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In feugiat feugiat mauris. Sed egestas nulla lectus.</p>
+                </div>
+            </section>
 
+            <hr class="feature-divider">
+
+            <section class="additional-features">
+                <h3 class="subtitle">That's not all.</h3>
+                <div class="add-features-section">
+                    <p>Custom Domain Name</p>
+                    <p>Web Hosting</p>
+                    <p>SSL Certificates*</p>
+                    <p>SEO Optimisation</p>
+                    <p>Unlimited DNS Records</p>
+                    <p>Version Rollback*</p>
+                    <p>Collaboration*</p>
+                    <p>Caching*</p>
+                    <p>Email Routing*</p>
+                </div>
+            </section>
+            <p class="disclaimer"><i>Features highlighted with an asterisk (*) may be limited or may not be included in the free tier. Visit the <a href="/pricing.html">Pricing</a> site for more information.</i></p>
         </section>
 
         <section id="testimonials">
