--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="./styles/Normalize.css" type="text/css">
         <link rel="stylesheet" href="./styles/styles.css" type="text/css">
         <link rel="stylesheet" href="./styles/navbar.css" type="text/css">
         <link rel="stylesheet" href="./styles/footer.css" type="text/css">
@@ -11,7 +12,6 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&family=Sometype+Mono&display=swap" rel="stylesheet">
-        
         
         <title>Some Name | Home</title>
     </head>
