--- a/pricing.html
+++ b/pricing.html
@@ -2,11 +2,13 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="./styles/Normalize.css" type="text/css">
         <link rel="stylesheet" href="/styles/pricing.css" type="text/css">
         <link rel="stylesheet" href="./styles/navbar.css" type="text/css">
         <link rel="stylesheet" href="./styles/footer.css" type="text/css">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
+        <!-- Import Fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&family=Sometype+Mono&display=swap" rel="stylesheet">
