feat: merge contact form into landing

--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
 
                 <nav class="tabs">
                     <a href="/pricing.html">Pricing</a>
-                    <a href="/contact.html">Contact Us</a>
                     <a class="button">Get Started</a>
                 </nav>
 
@@ -96,6 +95,40 @@
 
         <section id="testimonials">
 
+        </section>
+
+        <section id="contact">
+            <h1 class="title">Contact Us</h1>
+            <p class="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sollicitudin justo nec dolor dictum, vestibulum ultrices dui aliquam. Aenean vulputate feugiat porttitor.</p>
+            <form>
+                <div class="inline-container">
+                    <label>
+                        First Name
+                        <input type="text" placeholder="John" required>
+                    </label>
+                    <label>
+                        Last Name                
+                        <input type="text" placeholder="Doe" required>
+                    </label>
+                </div>
+
+                <label>
+                    Email Address
+                    <input type="email" placeholder="example@example.com" required>
+                </label>
+                <label>
+                    Title
+                    <input type="email" placeholder="An Amazing Title" required>
+                </label>
+                <label>
+                    Description
+                    <textarea required></textarea>
+                </label>
+
+                <button type="submit">
+                    Submit
+                </button>
+            </form>
         </section>
 
         <a id="goto-top" href="#hero-section">
