--- a/pricing.html
+++ b/pricing.html
@@ -23,7 +23,7 @@
 
                 <nav class="tabs">
                     <a href="/pricing.html">Pricing</a>
-                    <a href="/contact.html">Contact Us</a>
+                    <a>Domains</a>
                     <a class="button">Get Started</a>
                 </nav>
 
