--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&family=Sometype+Mono&display=swap" rel="stylesheet">
         
+        <!-- JS Functions -->
+        <script src="./js/navbar.js"></script>
+        <script src="./js/index.js"></script>
+
         <title>Some Name | Home</title>
     </head>
 
@@ -26,10 +30,10 @@
                     <a class="button">Get Started</a>
                 </nav>
 
-                <i data-feather="menu" class="mobile-hamburger"></i>
+                <i data-feather="menu" id="mobile-hamburger"></i>
             </div>
 
-            <nav class="mobile-tabs">
+            <nav id="mobile-tabs">
                 <a href="/pricing.html">Pricing</a>
                 <a class="button">Get Started</a>
             </nav>
@@ -69,7 +73,7 @@
                 </div>
                 <div class="feature">
                     <img src="https://placehold.co/500x400">
-                    <h4 class="name">Lorem Ipsum</h4>
+                    <h4 class="name">Domain Management</h4>
                     <p class="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In feugiat feugiat mauris. Sed egestas nulla lectus.</p>
                 </div>
             </section>
@@ -79,7 +83,6 @@
             <section class="additional-features">
                 <h3 class="subtitle">That's not all.</h3>
                 <div class="add-features-section">
-                    <p>Custom Domain Name</p>
                     <p>Web Hosting</p>
                     <p>SSL Certificates*</p>
                     <p>SEO Optimisation</p>
@@ -87,18 +90,19 @@
                     <p>Version Rollback*</p>
                     <p>Collaboration*</p>
                     <p>Caching*</p>
-                    <p>Email Routing*</p>
+                    <p>Custom Email Domain*</p>
+                    <p>24/7 Support</p>
                 </div>
             </section>
             <p class="disclaimer"><i>Features highlighted with an asterisk (*) may be limited or may not be included in the free tier. Visit the <a href="/pricing.html">Pricing</a> site for more information.</i></p>
         </section>
 
         <section id="testimonials">
-
+            <h2 class="title">Chosen by many, Trusted by all</h2>
         </section>
 
         <section id="contact">
-            <h1 class="title">Contact Us</h1>
+            <h2 class="title">Contact Us</h2>
             <p class="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sollicitudin justo nec dolor dictum, vestibulum ultrices dui aliquam. Aenean vulputate feugiat porttitor.</p>
             <form>
                 <div class="inline-container">
@@ -107,7 +111,7 @@
                         <input type="text" placeholder="John" required>
                     </label>
                     <label>
-                        Last Name                
+                        Last Name
                         <input type="text" placeholder="Doe" required>
                     </label>
                 </div>
