--- a/pricing.html
+++ b/pricing.html
@@ -17,12 +17,12 @@
         <!-- JS Functions -->
         <script src="./js/navbar.js"></script>
 
-        <title>SomeName | Pricing</title>
+        <title>Webify | Pricing</title>
     </head>
     <body>
         <header id="navigation">
             <div id="navbar">
-                <h1><a href="/">OneSite</a></h1>
+                <h1><a href="/">Webify</a></h1>
 
                 <nav class="tabs">
                     <a href="/pricing.html">Pricing</a>
@@ -121,7 +121,7 @@
 
         <footer>
             <div class="left">
-                <h3 class="title">OneSite</h3>
+                <h3 class="title">Webify</h3>
                 <p class="location">10 Singapore Rd, #01-01</p>
             </div>
             <div class="social-media-icons">
