feat: faq section

--- a/index.html
+++ b/index.html
@@ -151,21 +151,14 @@
         </section>
 
         <section id="contact-faq">
-            <h2 class="title">Contact Us</h2>
-            <p class="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sollicitudin justo nec dolor dictum, vestibulum ultrices dui aliquam. Aenean vulputate feugiat porttitor.</p>
-            <div class="split">
-                <form id="contact">
-                    <div class="inline-container">
-                        <label>
-                            First Name
-                            <input type="text" placeholder="John" required>
-                        </label>
-                        <label>
-                            Last Name
-                            <input type="text" placeholder="Doe" required>
-                        </label>
-                    </div>
-    
+            <section id="contact">
+                <h2 class="title">Contact Us</h2>
+                <p class="desc">Contact us if you have any questions or are enquiring about the Enterprise plan. We will get back to you within 5 working days.</p>
+                <form>
+                    <label>
+                        Name
+                        <input type="text" placeholder="John Doe" required>
+                    </label>
                     <label>
                         Email Address
                         <input type="email" placeholder="example@example.com" required>
@@ -183,10 +176,54 @@
                         Submit
                     </button>
                 </form>
-                <div id="faq">
-
+            </section>
+            <section id="faq">
+                <h2 class="title">FAQ</h2>
+                
+                <div class="faq-section">
+                    <hr>
+                    <div class="faq-container">
+                        <div class="faq-container-header">
+                            <p>Can I switch between pricing tiers at any time?</p>
+                            <i data-feather="plus" class="expand-icon"></i>
+                        </div>
+                        <p class="faq-container-desc hidden">Yes, you can upgrade or downgrade your plan at any time. Navigate to the billing section in your account settings. For enterprise users, do contact us.</p>
+                    </div>
+                    <hr>
+                    <div class="faq-container">
+                        <div class="faq-container-header">
+                            <p>Is there a free trial for paid plans?</p>
+                            <i data-feather="plus" class="expand-icon"></i>
+                        </div>
+                        <p class="faq-container-desc hidden">Yes, all paid plans come with a 14 day trial. We do not need your payment information during this period.</p>
+                    </div>
+                    <hr>
+                    <div class="faq-container">
+                        <div class="faq-container-header">
+                            <p>Is there a special price for students?</p>
+                            <i data-feather="plus" class="expand-icon"></i>
+                        </div>
+                        <p class="faq-container-desc hidden">Yes! Create an account using your school's email, and contact us with proof of education for 25% off on the Professional plan.</p>
+                    </div>
+                    <hr>
+                    <div class="faq-container">
+                        <div class="faq-container-header">
+                            <p>Can I transfer my domain to/from Webify?</p>
+                            <i data-feather="plus" class="expand-icon"></i>
+                        </div>
+                        <p class="faq-container-desc hidden">Yes. However, once you have transferred a domain, your domain will be ineligible for transfers for 14 days.</p>
+                    </div>
+                    <hr>
+                    <div class="faq-container">
+                        <div class="faq-container-header">
+                            <p>Can I cancel my subscription at any time?</p>
+                            <i data-feather="plus" class="expand-icon"></i>
+                        </div>
+                        <p class="faq-container-desc hidden">Yes, you can cancel your subscription at any time. However, all payments made will not be refunded if you cancel before your subscription ends.</p>
+                    </div>
+                    <hr>
                 </div>
-            </div>
+            </section>
         </section>
 
         <a id="goto-top" href="#hero-section">
