--- a/pricing.html
+++ b/pricing.html
@@ -89,7 +89,7 @@
                 <br>
 
                 <button class="action-btn">
-                    Upgrade your plan
+                    Start your 14 day trial
                     <i data-feather="arrow-right" class="action-btn-icn"></i>
                 </button>
             </div>
