--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 
                 <nav class="tabs">
                     <a href="/pricing.html">Pricing</a>
+                    <a href="/domain.html">Domains</a>
                     <a class="button">Get Started</a>
                 </nav>
 
@@ -148,6 +149,9 @@
                 <p class="pagination-circle" id=""></p>
                 <p class="pagination-circle" id=""></p>
             </div>
+            <div class="testimonial-companies">
+                
+            </div>
         </section>
 
         <section id="contact-faq">
@@ -171,7 +175,7 @@
                         Description
                         <textarea required></textarea>
                     </label>
-    
+
                     <button type="submit">
                         Submit
                     </button>
