--- a/pricing.html
+++ b/pricing.html
@@ -26,6 +26,7 @@
 
                 <nav class="tabs">
                     <a href="/pricing.html">Pricing</a>
+                    <a href="/domain.html">Domains</a>
                     <a class="button">Get Started</a>
                 </nav>
 
