feat: improved interactivity and fix css

--- a/pricing.html
+++ b/pricing.html
@@ -21,7 +21,7 @@
     </head>
     <body>
         <header id="navigation">
-            <div id="navbar">
+            <div id="navbar" class="dark">
                 <h1><a href="/">Webify</a></h1>
 
                 <nav class="tabs">
@@ -33,7 +33,7 @@
                 <i data-feather="menu" id="mobile-hamburger"></i>
             </div>
 
-            <nav id="mobile-tabs">
+            <nav id="mobile-tabs" class="dark">
                 <a href="/pricing.html">Pricing</a>
                 <a class="button">Get Started</a>
             </nav>
@@ -41,7 +41,7 @@
 
         <section id="hero-section">
             <h1 class="title">Select the Perfect Tier for you</h1>
-            <p class="desc">wow</p>
+            <!-- <p class="desc">wow</p> -->
         </section>
 
         <section id="price-tiers">
@@ -120,9 +120,13 @@
             </div>
         </section>
 
+        <section id="feature-comparison">
+            
+        </section>
+
         <footer>
             <div class="left">
-                <h3 class="title">Webify</h3>
+                <h3 class="name">Webify</h3>
                 <p class="location">10 Singapore Rd, #01-01</p>
             </div>
             <div class="social-media-icons">
