--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
             <section id="contact">
                 <h2 class="title">Contact Us</h2>
                 <p class="desc">Contact us if you have any questions or are enquiring about the Enterprise plan. We will get back to you within 5 working days.</p>
-                <form>
+                <form id="contact-form">
                     <label>
                         Name
                         <input type="text" placeholder="John Doe" required>
@@ -169,14 +169,14 @@
                     </label>
                     <label>
                         Title
-                        <input type="email" placeholder="An Amazing Title" required>
+                        <input type="text" placeholder="An Amazing Title" required>
                     </label>
                     <label>
                         Description
                         <textarea required></textarea>
                     </label>
 
-                    <button type="submit">
+                    <button type="submit" id="contact-submit">
                         Submit
                     </button>
                 </form>
