feat: compare tiers table

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
         <section id="contact-faq">
             <section id="contact">
                 <h2 class="title">Contact Us</h2>
-                <p class="desc">Contact us if you have any questions or are enquiring about the Enterprise plan. We will get back to you within 5 working days.</p>
+                <p class="desc">Contact us if you have any questions or are enquiring about the Business plan. We will get back to you within 5 working days.</p>
                 <form id="contact-form">
                     <label>
                         Name
