--- a/pricing.html
+++ b/pricing.html
@@ -46,7 +46,7 @@
 
         <section id="price-tiers">
             <div class="tier">
-                <h2 class="name">Free</h2>
+                <h2 class="name">Hobby</h2>
                 <p class="desc">Kickstart your hobby or personal projects; Perfect for beginners.</p>
                 <h3 class="price">$0</h3>
 
@@ -72,7 +72,7 @@
 
             <div class="tier">
                 <h2 class="name">Professional</h2>
-                <p class="desc">Everything in Free Tier, and much more. Perfect for delving deeper into websites.</p>
+                <p class="desc">Everything in the Hobby Tier, and much more. Perfect for delving deeper into websites.</p>
                 <h3 class="price">$15<span class="price-per"> per month</span></h3>
 
                 <hr>
@@ -121,7 +121,80 @@
         </section>
 
         <section id="feature-comparison">
-            
+            <h2 class="subtitle">Compare Tiers</h2>
+            <p>Find out more about out different Tiers in more detail. Choose the one that suits your use case best.</p>
+            <div class="table-scroll">
+                <table>
+                    <!-- Table Headers -->
+                    <tr class="table-headers">
+                        <td style="width: 25%;"></td>
+                        <td>Hobby</td>
+                        <td>Professional</td>
+                        <td>Business</td>
+                    </tr>
+                    <!-- Table Contents (Rows) -->
+                    <tr class="table-rows">
+                        <td class="feature">Drag and Drop Elements</td>
+                        <td><i data-feather="check" class="icon check"></i></td>
+                        <td><i data-feather="check" class="icon check"></i></td>
+                        <td><i data-feather="check" class="icon check"></i></td>
+                    </tr>
+                    <tr class="table-rows">
+                        <td class="feature">Advanced Editing</td>
+                        <td><i data-feather="check" class="icon check"></i></td>
+                        <td><i data-feather="check" class="icon check"></i></td>
+                        <td><i data-feather="check" class="icon check"></i></td>
+                    </tr>
+                    <tr class="table-rows">
+                        <td class="feature">Web Hosting</td>
+                        <td>Up to 10 Projects</td>
+                        <td>Unlimited</td>
+                        <td>Unlimited</td>
+                    </tr>
+                    <tr class="table-rows">
+                        <td class="feature">Collaboration</td>
+                        <td><i data-feather="x" class="icon"></i></td>
+                        <td>Up to 10 People</td>
+                        <td>Unlimited</td>
+                    </tr>
+                    <tr class="table-rows">
+                        <td class="feature">Role-Based Access Control</td>
+                        <td><i data-feather="x" class="icon"></i></td>
+                        <td><i data-feather="x" class="icon"></i></td>
+                        <td><i data-feather="check" class="icon check"></i></td>
+                    </tr>
+                    <tr class="table-rows">
+                        <td class="feature">Support</td>
+                        <td>Email Only</td>
+                        <td>24/7</td>
+                        <td>24/7 Pirority</td>
+                    </tr>
+                    <tr class="table-rows">
+                        <td class="feature">Version Control</td>
+                        <td><i data-feather="x" class="icon"></i></td>
+                        <td><i data-feather="check" class="icon check"></i></td>
+                        <td><i data-feather="check" class="icon check"></i></td>
+                    </tr>
+                    <tr class="table-rows">
+                        <td class="feature">Debug Logs</td>
+                        <td>Downloadable after Failure</td>
+                        <td>Real-Time</td>
+                        <td>Real-Time</td>
+                    </tr>
+                    <tr class="table-rows">
+                        <td class="feature">Custom Email Domain</td>
+                        <td><i data-feather="x" class="icon"></i></td>
+                        <td><i data-feather="check" class="icon check"></i></td>
+                        <td><i data-feather="check" class="icon check"></i></td>
+                    </tr>
+                    <tr class="table-rows">
+                        <td class="feature">A/B Testing</td>
+                        <td><i data-feather="x" class="icon"></i></td>
+                        <td><i data-feather="x" class="icon"></i></td>
+                        <td><i data-feather="check" class="icon check"></i></td>
+                    </tr>
+                </table>
+            </div>
         </section>
 
         <footer>
