wip: testimonials section

--- a/domain.html
+++ b/domain.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="./styles/navbar.css" type="text/css">
+        <link rel="stylesheet" href="./styles/domain.css" type="text/css">
 
         <!-- Import Fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,7 +18,7 @@
     </head>
     <body>
         <header id="navigation">
-            <div id="navbar">
+            <div id="navbar" class="dark">
                 <h1><a href="/">Webify</a></h1>
 
                 <nav class="tabs">
@@ -29,7 +30,7 @@
                 <i data-feather="menu" id="mobile-hamburger"></i>
             </div>
 
-            <nav id="mobile-tabs">
+            <nav id="mobile-tabs" class="dark">
                 <a href="/pricing.html">Pricing</a>
                 <a class="button">Get Started</a>
             </nav>
