--- a/index.html
+++ b/index.html
@@ -150,7 +150,9 @@
                 <p class="pagination-circle" id=""></p>
             </div>
             <div class="testimonial-companies">
-                
+                <img src="/img/AirbnbLogo.png" class="testimonial-img">
+                <img src="/img/FigmaIcon.svg" class="testimonial-img">
+                <img src="/img/OpenAILogo.svg" class="testimonial-img">
             </div>
         </section>
 
