--- a/pricing.html
+++ b/pricing.html
@@ -122,7 +122,7 @@
 
         <section id="feature-comparison">
             <h2 class="subtitle">Compare Tiers</h2>
-            <p>Find out more about out different Tiers in more detail. Choose the one that suits your use case best.</p>
+            <p>Find out more about out different Tiers in more detail. Choose the one that suits your use-case best.</p>
             <div class="table-scroll">
                 <table>
                     <!-- Table Headers -->
