docs: features, design process

--- a/pricing.html
+++ b/pricing.html
@@ -40,7 +40,7 @@
         </header>
 
         <section id="hero-section">
-            <h1 class="title">Select the Perfect Tier for you</h1>
+            <h1 class="title">Select the Perfect Tier<br> for you</h1>
             <!-- <p class="desc">wow</p> -->
         </section>
 
