feat: carousel and typed header title

--- a/domain.html
+++ b/domain.html
@@ -13,6 +13,7 @@
         
         <!-- JS Functions -->
         <script src="./js/navbar.js"></script>
+        <script src="./js/domains.js"></script>
         
         <title>Webify | Domains</title>
     </head>
@@ -35,5 +36,13 @@
                 <a class="button">Get Started</a>
             </nav>
         </header>
+
+        <section id="">
+
+        </section>
+
+        <section id="domain-list">
+
+        </section>
     </body>
 </html>
