--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
         <section id="hero-section">
             <div class="header">
-                <h1 class="title">Design it, Ship it.</h1>
+                <h1 class="title"><span class="typed-title">Design it, Ship it.</span><span class="title-cursor">|</span></h1>
                 <p class="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In feugiat feugiat mauris. Sed egestas nulla lectus.</p>
                 <button>Get Started</button>
             </div>
@@ -153,6 +153,9 @@
                 <img src="/img/AirbnbLogo.png" class="testimonial-img">
                 <img src="/img/FigmaIcon.svg" class="testimonial-img">
                 <img src="/img/OpenAILogo.svg" class="testimonial-img">
+                <img src="/img/Notion.svg" class="testimonial-img">
+                <img src="/img/Carousell.svg" class="testimonial-img">
+                <img src="/img/Grab.svg" class="testimonial-img">
             </div>
         </section>
 
