wip: domains page

--- a/domain.html
+++ b/domain.html
@@ -37,8 +37,15 @@
             </nav>
         </header>
 
-        <section id="">
-
+        <section id="hero-section">
+            <div class="title-desc">
+                <h1 class="margin0">Find your Domain</h1>
+                <p class="margin0">Search, Claim, Use. It's that easy. Discovering your perfect domain has never been easier.</p>
+            </div>
+            <form id="search-bar">
+                <input type="text" id="domain-search" placeholder="Search for a Domain">
+                <button type="submit" id="search-btn">Search</button>
+            </form>
         </section>
 
         <section id="domain-list">
